form sizing finished, beginning work on modal logic

--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
       <input id="pages-input" type="text">
     </div>
     <div id="form-footer">
-      <button id="submit">Submit</button>
-      <button id="delete-account">Delete</button>
+      <div>
+        <button id="submit">Submit</button>
+        <button id="delete-account">Delete</button>
+      </div>
       <div>
         <input type="radio">
         <label for="read-input">Read?</label>
       </div>
     </div>
-    
-    
   </div>
+  <div id="page-footer"><div>x</div></div>
+  <script src="./scripts/"></script>
 </body>
 </html>
