getting most of the way there with book card logic

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="page-header"><h1>Library</h1></div>
   <div id="library">
-    <div class="book-container">
+    <!-- <div class="book-container">
       <div class="book-container-line"><h2>Author</h2> <p>asdjfhgad</p></div>
       <div class="book-container-line"><h2>Title</h2> <p>asdjfhgad</p></div>
       <div class="book-container-line"><h2>Number of Pages</h2> <p>asdjfhgad</p></div>
@@ -29,9 +29,8 @@
       <div class="book-container-line"><h2>Title</h2> <p>asdjfhgad</p></div>
       <div class="book-container-line"><h2>Number of Pages</h2> <p>asdjfhgad</p></div>
       <div class="book-container-line"><h2>Read</h2> <p>asdjfhgad</p></div>
-      <div class="book-container-remove"><button>Remove</button></div>
-    </div>
-    
+      <div class="book-container-remove"><button class="remove-button">Remove</button></div>
+    </div> -->
   </div>
   <div class="invisible" id="book-entering-form">
     <div class="form-topper"><div id="closing-button">x</div></div>
@@ -50,10 +49,10 @@
     <div id="form-footer">
       <div>
         <button id="submit">Submit</button>
-        <button id="delete-account">Delete</button>
+        <button id="remove-book">Delete</button>
       </div>
       <div>
-        <input type="radio">
+        <input type="checkbox" id="have-read">
         <label for="read-input">Read?</label>
       </div>
     </div>
