--- a/index.html
+++ b/index.html
@@ -10,27 +10,6 @@
 <body>
   <div id="page-header"><h1>Library</h1></div>
   <div id="library">
-    <!-- <div class="book-container">
-      <div class="book-container-line"><h2>Author</h2> <p>asdjfhgad</p></div>
-      <div class="book-container-line"><h2>Title</h2> <p>asdjfhgad</p></div>
-      <div class="book-container-line"><h2>Number of Pages</h2> <p>asdjfhgad</p></div>
-      <div class="book-container-line"><h2>Read</h2> <p>asdjfhgad</p></div>
-      <div class="book-container-remove"><button>Remove</button></div>
-    </div>
-    <div class="book-container">
-      <div class="book-container-line"><h2>Author</h2> <p>asdjfhgad</p></div>
-      <div class="book-container-line"><h2>Title</h2> <p>asdjfhgad</p></div>
-      <div class="book-container-line"><h2>Number of Pages</h2> <p>asdjfhgad</p></div>
-      <div class="book-container-line"><h2>Read</h2> <p>asdjfhgad</p></div>
-      <div class="book-container-remove"><button>Remove</button></div>
-    </div>
-    <div class="book-container">
-      <div class="book-container-line"><h2>Author</h2> <p>asdjfhgad</p></div>
-      <div class="book-container-line"><h2>Title</h2> <p>asdjfhgad</p></div>
-      <div class="book-container-line"><h2>Number of Pages</h2> <p>asdjfhgad</p></div>
-      <div class="book-container-line"><h2>Read</h2> <p>asdjfhgad</p></div>
-      <div class="book-container-remove"><button class="remove-button">Remove</button></div>
-    </div> -->
   </div>
   <div class="invisible" id="book-entering-form">
     <div class="form-topper"><div id="closing-button">x</div></div>
@@ -49,7 +28,7 @@
     <div id="form-footer">
       <div>
         <button id="submit">Submit</button>
-        <button id="remove-book">Delete</button>
+        <button id="delete-book">Delete</button>
       </div>
       <div>
         <input type="checkbox" id="have-read">
